force-app/main/default/objects/Patient__c/fields/Age__c.field-meta.xml
<CustomField>
    <fullName>Age__c</fullName>
    <formula>((Today()- DOB__c) / 365)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Age (Yrs)</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>