force-app/main/default/objects/Patient__c/fields/Attendent_Name__c.field-meta.xml
<CustomField>
    <fullName>Attendent_Name__c</fullName>
    <label>Attendent Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>