force-app/main/default/objects/Patient__c/fields/Attendent_Phone__c.field-meta.xml
<CustomField>
    <fullName>Attendent_Phone__c</fullName>
    <label>Attendent Phone</label>
    <type>Phone</type>
</CustomField>