force-app/main/default/objects/Patient__c/fields/In_patient__c.field-meta.xml
<CustomField>
    <fullName>In_patient__c</fullName>
    <defaultValue>false</defaultValue>
    <label>In-patient?</label>
    <type>Checkbox</type>
</CustomField>