force-app/main/default/objects/Patient__c/recordTypes/Patient_Hospital_Record_Type.recordType-meta.xml
<RecordType>
    <fullName>Patient_Hospital_Record_Type</fullName>
    <active>true</active>
    <description>Creating for the path Object</description>
    <label>Patient Hospital Record Type</label>
</RecordType>