force-app/main/default/objects/Patient__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>In_patient__c</columns>
    <columns>Attendent_Name__c</columns>
    <columns>Attendent_Phone__c</columns>
    <columns>Hospital__c</columns>
    <columns>DOB__c</columns>
    <columns>Age__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Records</label>
</ListView>